fix for background-size cover on iOs

--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -22,7 +22,7 @@ body {
 
 body:after {
   content: "";
-  background: url(#{$image-path}bg.jpg) no-repeat center center fixed;
+  background: url(#{$image-path}bg.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
